# bls-hsm-2

./: .gitignore  README.md
lib/: bls_hsm.h  bls_hsm_ns.c  bls_hsm_ns.h
mycli/: CMakeLists.txt  prj.conf
mycli/src/: main.c  secure_partition_interface.c  secure_partition_interface.h
secure_partition/: CMakeLists.txt  secure_partition.c  tfm_secure_partition.yaml
